--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,17 @@
 
 <body class="mat-typography">
   <app-root></app-root>
+
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8XFDVPT1X"></script>
-  <script> window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'G-E8XFDVPT1X'); </script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-95MNMXZCP9"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-95MNMXZCP9');
+  </script>
+
 </body>
 
 </html>
