--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,13 @@
   <app-root></app-root>
 
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-95MNMXZCP9"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NL2M9BWS38"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'G-95MNMXZCP9');
+    gtag('config', 'G-NL2M9BWS38');
   </script>
 
 </body>
